--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   },
   "files.associations": {
     "global.json": "jsonc"
-  }
+  },
+  "dotnet.defaultSolution": "DevTKSS.MyManufacturerERP.slnx"
 }
