--- a/src/WebApi/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi/WebApi.csproj
@@ -45,6 +45,7 @@
   <ItemGroup> 
     <Content Include="..\AppData\*.json" CopyToOutputDirectory="PreserveNewest" LinkBase="AppData" />
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\..\DataContracts\DataContracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
