--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="../Directory.Build.props" />
+  <Import Project="$(MSBuildThisFileDirectory)../Directory.Build.props" />
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Update="Mediator.SourceGenerator"
                       PrivateAssets="all"
-                      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+                      IncludeAssets="runtime; build; native; contentfiles; analyzers;" />
     
     <PackageReference Update="Microsoft.Extensions.ApiDescription.Server"
                       PrivateAssets="all"
