--- a/src/Extensions/OAuth/DevTKSS.Extensions.OAuth.csproj
+++ b/src/Extensions/OAuth/DevTKSS.Extensions.OAuth.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>$(DefaultTargetFramework)</TargetFrameworks>
@@ -9,12 +9,7 @@
     <UnoFeatures>
       Configuration;
       HttpRefit;
-      Authentication;
     </UnoFeatures>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" />
-  </ItemGroup>
 
 </Project>
