--- a/src/Client/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/Client/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net10.0-desktop;net10.0-android;net10.0-ios;net10.0-browserwasm;$(DefaultTargetFramework)</TargetFrameworks>
     <UserSecretsId>$(MyManufacturerERPUserSecretsId)</UserSecretsId>
@@ -55,7 +55,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Extensions\DesktopAuthenticationIntegration\DesktopAuthenticationIntegration.csproj" />
+    <ProjectReference Include="..\..\Extensions\DesktopAuth\DevTKSS.Extensions.Uno.Authentication.Desktop.csproj" />
     <ProjectReference Include="..\..\Extensions\OAuth.Validation\DevTKSS.Extensions.OAuth.Validation.csproj" />
     <ProjectReference Include="..\..\Extensions\OAuth\DevTKSS.Extensions.OAuth.csproj" />
     <ProjectReference Include="..\..\DataContracts\DataContracts.csproj" />
