chore(config): update client and WebApi auth settings

--- a/src/Client/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/Client/DevTKSS.MyManufacturerERP/appsettings.json
@@ -24,40 +24,6 @@
     "Title": "My Manufacturer ERP",
     "Environment": "Production"
   },
-  "OAuth": {
-    "Url": "https://openapi.etsy.com/v3/",
-    "UseNativeHandler": true,
-    "TokenCacheOptions": {
-      "AccessTokenKey": "AccessToken",
-      "RefreshTokenKey": "RefreshToken",
-      "IdTokenKey": "IdToken"
-    },
-    "ClientOptions": {
-      "ClientID": "",
-      "EndpointOptions": {
-        "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-        "TokenEndpoint": "/public/oauth/token",
-        "UserInfoEndpoint": "/public/users/me"
-      },
-      "CallbackUri": "http://mymanufacturererp/etsy/callback",
-      "Scopes": [
-        "listings_r",
-        "listings_w",
-        "shops_r",
-        "shops_w"
-      ]
-    },
-    "UriTokenOptions": {
-      "AccessTokenKey": "access_token",
-      "RefreshTokenKey": "refresh_token",
-      "IdTokenKey": "client_id",
-      "OtherTokenKeys": [
-        {
-          "ShopIdTokenKey": "shop_id"
-        }
-      ]
-    }
-  },
   "LocalizationConfiguration": {
     "Cultures": [
       "de",
@@ -69,8 +35,16 @@
   },
 
   "ServerOptions": {
-    "RootUri": "https://my-manufacturer-erp",
-    "Port": 5001,
-    "CallbackUri": "/etsy/callback"
+    "Hostname4": "https://my-manufacturer-erp",
+    "Port": 5001
+  },
+  "Web": {
+    "LoginStartUri": "http://localhost:5000/auth/login",
+    "LogoutStartUri": "http://localhost:5000/auth/logout",
+    "LoginCallbackUri": "http://localhost:5001/auth/callback",
+    "LogoutCallbackUri": "http://localhost:3000/",
+    "AccessTokenKey": "MyManufacturerERP_AccessToken",
+    "RefreshTokenKey": "MyManufacturerERP_RefreshToken",
+    "IdTokenKey": "MyManufacturerERP_IdToken"
   }
 }
