--- a/src/WebApi/WebApi/appsettings.json
+++ b/src/WebApi/WebApi/appsettings.json
@@ -30,13 +30,10 @@
   "Authentication": {
       "DefaultScheme": "Cookies", // Default scheme for authentication, can be overridden in specific controllers or actions"
     "Etsy": {
-      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-      "TokenEndpoint": "https://api.etsy.com/v3/public/oauth/token",
-      "UserInformationEndpoint": "https://api.etsy.com/v3/application/users/me",
         "ClientId": "YOUR_ETSY_CLIENT_ID", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
         "ClientSecret": "YOUR_ETSY_KEYSTRING", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
         "Scope": "shops_r email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
-        "CallbackPath": "/callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
+        "CallbackPath": "/callback/etsy", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
       "UsePkce": true
     }
   }
